--- a/Modelisation/Robotique_theorique/Transformation_homogene.html
+++ b/Modelisation/Robotique_theorique/Transformation_homogene.html
@@ -88,15 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-         <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html" class="active">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html" >Impedance & Admitance</a></li>
+          <li><a href="Transformation_homogene.html" class="active">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
+        <li><a href="generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="redondance.html">Redondance</a></li>
+        <li><a href="parallele.html">Robot parallele</a></li>
+        <li><a href="Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -419,7 +419,7 @@
 
     <p>avec un vecteur <em>[1,0,0]</em> d'origine <em>[0.25,0,1]</em>:
 
-  <img src="Modelisation\Robotique_theorique\transforme_homogene_screen.jpg" alt="Image d'exemple transformation homogène">
+  <img src="transforme_homogene_screen.jpg" alt="Image d'exemple transformation homogène">
 <details >
 <summary > <b style="color: red;">Transformation homogène sur Python</b> 
     </summary >
@@ -585,5 +585,6 @@ plt.show()
 
 </body>
 </html>
+
 
 
