--- a/Modelisation/Robotique_theorique/convention_DH.html
+++ b/Modelisation/Robotique_theorique/convention_DH.html
@@ -88,15 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-         <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html" class="active">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html">Impedance & Admitance</a></li>
+          <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html" class="active">Convention DH</a></li>
+        <li><a href="generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="redondance.html">Redondance</a></li>
+        <li><a href="parallele.html">Robot parallele</a></li>
+        <li><a href="Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -173,7 +173,7 @@ $$
 
         <p>Convention de Denavit-Hartenberg (sur ce schéma α<sub>i</sub> < 0 et θ<sub>i</sub> < 0) :</p>
 
-        <img src="Modelisation/Robotique_theorique/DH.png" alt="convention DH exemple">
+        <img src="DH.png" alt="convention DH exemple">
         
 
 
@@ -232,14 +232,14 @@ $$
         la convention DH.   
     </p>
 
-    <img src="Modelisation/Robotique_theorique/PA10_joint.jpg" alt="organisation articulaire PA10-7C">
+    <img src="PA10_joint.jpg" alt="organisation articulaire PA10-7C">
     <div class="legend">
         <p>
             Système de coordonnées du PA10-7C
         </p>
     </div>
  
-    <img src="Modelisation/Robotique_theorique/PA10_lenght.jpg" alt="longueur articulaire PA10-7C">
+    <img src="PA10_lenght.jpg" alt="longueur articulaire PA10-7C">
     <div class="legend"> 
         <p>
             Longueur articulaire PA10-7C
@@ -461,5 +461,6 @@ plt.show()
 
 </body>
 </html>
+
 
 
