--- a/Modelisation/Robotique_theorique/generation_mouvement.html
+++ b/Modelisation/Robotique_theorique/generation_mouvement.html
@@ -88,15 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html" class="active">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html">Impedance & Admitance</a></li>
+        <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
+        <li><a href="generation_mouvement.html" class="active">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="redondance.html">Redondance</a></li>
+        <li><a href="parallele.html">Robot parallele</a></li>
+        <li><a href="Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -129,7 +129,7 @@
      Cela peut tout de même être un avantage si l’on souhaite simplement que le robot 
      aille vite d’un point A à un point B, sans contrainte particulière.
      </p>
-<img src="Modelisation/Robotique_theorique/mouvement_articulaire.png" alt="mouvement espace articulaire">
+<img src="mouvement_articulaire.png" alt="mouvement espace articulaire">
   <div class="legend">
           <p>Exemple d'un mouvement d'un point A à B dans l'espace articulaire vue de deux angles</p>
   </div> 
@@ -158,7 +158,7 @@ $$
   mouvement dans le monde réele et ensuite grâce au MGI les traduire en mouvement
   articulaire.
   
-  <img src="Modelisation/Robotique_theorique/diff_space.png" alt="Difference_Joint_Operational_Space">
+  <img src="diff_space.png" alt="Difference_Joint_Operational_Space">
   <div class="legend">
           <p>Différence de calcul entre l'espace articulaire et opérationnel</p>
   </div> 
@@ -222,7 +222,7 @@ $$
 
 
 
-<img src="Modelisation/Robotique_theorique/profil_bangbang.png" alt="Profil_bangbang">
+<img src="profil_bangbang.png" alt="Profil_bangbang">
   <div class="legend">
           <p>Exemple de profil suivant une loi trapézoïdal type Bang-Bang</p>
   </div>
@@ -295,7 +295,7 @@ $$
 
 
 
-<img src="Modelisation/Robotique_theorique/profil_interpolation.png" alt="Profil_quintic">
+<img src="profil_interpolation.png" alt="Profil_quintic">
   <div class="legend">
           <p>Exemple de profil suivant une loi d'interpolation linéare d'ordre 5</p>
   </div>
@@ -355,7 +355,7 @@ on doit recalculer q<sub>0</sub>, v<sub>0</sub> et a<sub>0</sub> à la fin de ch
   </p>
 
 
-<img src="Modelisation/Robotique_theorique/profil_scurve.png" alt="Profil_Scruve">
+<img src="profil_scurve.png" alt="Profil_Scruve">
   <div class="legend">
           <p>Exemple de profil suivant une loi S-curve</p>
   </div>
@@ -893,4 +893,5 @@ plt.show()
 </body>
 
 </html>
+
 
