--- a/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html
+++ b/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html
@@ -88,15 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-         <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" class="active">Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html">Impedance & Admitance</a></li>
+         <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
+        <li><a href="generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" class="active" >Jacobienne</a></li>
+        <li><a href="redondance.html">Redondance</a></li>
+        <li><a href="parallele.html">Robot parallele</a></li>
+        <li><a href="Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -848,7 +848,7 @@ print("Q5 =", Q5)
     </p>
   </div>
 
-    <img src="Modelisation/Robotique_theorique/ellipsoid.png" alt="ellipsoid Manipulabilité">
+    <img src="ellipsoid.png" alt="ellipsoid Manipulabilité">
   <div class="legend">
           <p>visualisation de l'ellipsoïde de manipulabilité</p>
   </div>
@@ -975,7 +975,7 @@ plt.show()
   <br>
 </p>
 
-  <img src="Modelisation/Robotique_theorique/yoshikawa.png" alt="scatteur Manipulabilité">
+  <img src="yoshikawa.png" alt="scatteur Manipulabilité">
   <div class="legend">
           <p>Scatteur manipulabilité de Yoshikawa pour un 2 axes</p>
   </div>
@@ -1084,4 +1084,5 @@ plt.show()
 </body>
 
 </html>
+
 
