--- a/Modelisation/Robotique_theorique/parallele.html
+++ b/Modelisation/Robotique_theorique/parallele.html
@@ -88,15 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html" class="active">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html" >Impedance & Admitance</a></li>
+         <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
+        <li><a href="generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="redondance.html">Redondance</a></li>
+        <li><a href="parallele.html" class="active">Robot parallele</a></li>
+        <li><a href="Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -113,7 +113,7 @@
         pick-and-place, les simulateurs de mouvement ou certains procédés d’usinage.
       </p>
 
-      <img src="Modelisation/Robotique_theorique/tripetron.png" alt="robot parallele">
+      <img src="tripetron.png" alt="robot parallele">
       <div class="legend">
               <p>Exemple de robot avec une structure parallele (tripetron parallele)</p>
       </div> 
@@ -138,7 +138,7 @@
         </p>
       </div>
 
-      <img src="Modelisation/Robotique_theorique/scara_class_para.png" alt="mouvement espace articulaire">
+      <img src="scara_class_para.png" alt="mouvement espace articulaire">
       <div class="legend">
               <p>Différence entre respectivement, un robot scara classique et parallele </p>
       </div> 
@@ -168,7 +168,7 @@
         la position de l'effecteur final on doit trouver les intersections entre deux cercles 
       </p>
 
-      <img src="Modelisation/Robotique_theorique/intersection_cercle.png" alt="deux_cercles">
+      <img src="intersection_cercle.png" alt="deux_cercles">
       <div class="legend">
               <p>Schema intersection entre deux cercles </p>
       </div> 
@@ -187,7 +187,7 @@
           calcul l'intersection au niveau des coudes ± la moitié de la longueur de la dite base  : 
         </p> 
 
-        <img src="Modelisation/Robotique_theorique/L_base_outil.png" alt="deux_cercles_outil">
+        <img src="L_base_outil.png" alt="deux_cercles_outil">
         <div class="legend">
                 <p>Schema Tips base d'outil</p>
         </div> 
@@ -279,7 +279,7 @@ else:
 
       <p> Pour le MGI d'un robot parallele on suit presque une même méthode à chaque fois</p>
 
-      <img src="Modelisation/Robotique_theorique/calcul_para.png" alt="Schema MGi">
+      <img src="calcul_para.png" alt="Schema MGi">
       <div class="legend">
               <p>Schema de résolution du MGI pour un robot parallele</p>
       </div> 
@@ -400,7 +400,7 @@ else:
       </div>
 
 
-      <img src="Modelisation/Robotique_theorique/result_scara_para.jpg" alt="PLot MGi">
+      <img src="result_scara_para.jpg" alt="PLot MGi">
       <div class="legend">
               <p>Resultat de la modélisation avec le code</p>
       </div> 
@@ -672,3 +672,4 @@ J = A^+ \, B
 </body>
 
 </html>
+
