--- a/Modelisation/Robotique_theorique/redondance.html
+++ b/Modelisation/Robotique_theorique/redondance.html
@@ -88,15 +88,15 @@
     <aside class="sidebar">
       <h3>Robotique Théorique</h3>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Transformation_homogene.html">Transformation Homogène</a></li>
-        <li><a href="Modelisation/Robotique_theorique/mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
-        <li><a href="Modelisation/Robotique_theorique/convention_DH.html">Convention DH</a></li>
-        <li><a href="Modelisation/Robotique_theorique/generation_mouvement.html">Génération de mouvement</a></li>
-        <li><a href="Modelisation/Robotique_theorique/jacobienne_manipulabilite.html" >Jacobienne</a></li>
-        <li><a href="Modelisation/Robotique_theorique/redondance.html" class="active">Redondance</a></li>
-        <li><a href="Modelisation/Robotique_theorique/parallele.html">Robot parallele</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Controle_force.html" >Commande en Force</a></li>
-        <li><a href="Modelisation/Robotique_theorique/Impedance_Admittance.html">Impedance & Admitance</a></li>
+         <li><a href="Transformation_homogene.html">Transformation Homogène</a></li>
+        <li><a href="mgd_mgi_6axes.html">Résolution MGD & MGI seriel</a></li>
+        <li><a href="convention_DH.html">Convention DH</a></li>
+        <li><a href="generation_mouvement.html">Génération de mouvement</a></li>
+        <li><a href="jacobienne_manipulabilite.html" >Jacobienne</a></li>
+        <li><a href="redondance.html" class="active">Redondance</a></li>
+        <li><a href="parallele.html">Robot parallele</a></li>
+        <li><a href="Controle_force.html" >Commande en Force</a></li>
+        <li><a href="Impedance_Admittance.html">Impedance & Admitance</a></li>
       </ul>
       </ul>
     </aside>
@@ -332,7 +332,7 @@
             </div>
         </p>
 
-        <img src="Modelisation/Robotique_theorique/redondance_GIF.gif" alt="Animation GIF" style="max-width:400px;">
+        <img src="redondance_GIF.gif" alt="Animation GIF" style="max-width:400px;">
 
             <details >
     <summary > <b style="color: red;">MGI Numérique sur Python</b> 
@@ -670,3 +670,4 @@ for q in positions_qi:
 </body>
 
 </html>
+
