--- a/Projet/navbar_projet.html
+++ b/Projet/navbar_projet.html
@@ -4,8 +4,8 @@
     <li>
       <a href="#">Modélisation Systèmes et Robotique ▼</a>
       <ul>
-        <li><a href="Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
-        <li><a href="Modelisation/Commande_optimale.html">Commande Optimale</a></li>
+        <li><a href="../Modelisation/Robotique_theorique/Robotique_theorique.html">Robotique Théorique</a></li>
+        <li><a href="../Modelisation/Commande_optimale.html">Commande Optimale</a></li>
       </ul>
     </li>
     <li>
@@ -17,7 +17,7 @@
       </ul>
     </li>
      <li>
-      <a href="Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
+      <a href="../Vision/Vision_ordinateur.htlm">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
@@ -54,6 +54,7 @@
     }
   });
 </script>
+
 
 
 
