--- a/Modelisation/Robotique_theorique/Impedance_Admittance.html
+++ b/Modelisation/Robotique_theorique/Impedance_Admittance.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Commande par Impedance & Admittance</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -645,6 +645,7 @@ end
 </body>
 
 </html>
+
 
 
 
