--- a/Modelisation/Robotique_theorique/convention_DH.html
+++ b/Modelisation/Robotique_theorique/convention_DH.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Convention DH</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -461,6 +461,7 @@ plt.show()
 
 </body>
 </html>
+
 
 
 
