--- a/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html
+++ b/Modelisation/Robotique_theorique/jacobienne_manipulabilite.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Jacobienne</title>
   <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
@@ -1084,5 +1084,6 @@ plt.show()
 </body>
 
 </html>
+
 
 
