--- a/Projet/Gravity_Cancel.html
+++ b/Projet/Gravity_Cancel.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Robotique Théorique</title>
+  <title>Robotanti gravité</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -136,7 +136,7 @@
         <p>
             J'ai déja discuter de la théorie pur sur l'équilibrage statique <br>
             Vous pouvez retrouver la page concerné 
-            <a href=Modelisation\Robotique_theorique\jacobienne_manipulabilite.html> ici</a> 
+            <a href=../Modelisation\Robotique_theorique\jacobienne_manipulabilite.html> ici</a> 
         </p>
 
         <p>
@@ -1038,4 +1038,5 @@ finally:
 </body>
 
 </html>
+
 
